--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -1,12 +1,12 @@
 <ul class="nav flex-column">
     <li class="nav-item">
-      <a class="nav-link active" href="#">
+      <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
         <span data-feather="home"></span>
         Dashboard <span class="sr-only">(current)</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">
+      <a class="nav-link" routerLink="/orders" routerLinkActive="active">
         <span data-feather="file"></span>
         Orders
       </a>
