--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -39,13 +39,13 @@
       </li>
     </ul>
 
-    <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+    <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted" data-toggle="collapse" data-target="#collapseExample">
       <span>Saved reports</span>
       <a class="d-flex align-items-center text-muted" href="#">
         <span data-feather="plus-circle"></span>
       </a>
     </h6>
-    <ul class="nav flex-column mb-2">
+    <ul class="nav mb-2 collapse" id="collapseExample">
       <li class="nav-item">
         <a class="nav-link" href="#">
           <span data-feather="file-text"></span>
