--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -41,7 +41,7 @@
 
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted" data-toggle="collapse" data-target="#collapseExample">
       <span>Saved reports</span>
-      <a class="d-flex align-items-center text-muted" href="#">
+      <a class="d-flex align-items-center text-muted collapse-icon" href="#">
         <span data-feather="plus-circle"></span>
       </a>
     </h6>
