--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,6 +1,11 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">Orders</h1>
+
+    <p>Filter table</p>
 </div>
+
+<app-elements-table></app-elements-table>
+
 <div class="table-responsive">
   <table class="table table-striped table-sm">
     <thead>
