--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,22 +3,22 @@
 body {
     font-size: .875rem;
   }
-  
+
   .feather {
     width: 16px;
     height: 16px;
     vertical-align: text-bottom;
   }
-  
+
   /*
    * Content
    */
-  
+
   [role="main"] {
     padding-top: 48px; /* Space for fixed navbar */
   }
 
-  main{
+  .main-content{
     position: relative;
   }
 
