--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <app-header></app-header>
 
-
-
 <div class="container-fluid">
   <div class="row">
     <app-sidebar></app-sidebar>
 
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 content" [@fadeAnimation]="o.isActivated ? o.activatedRoute : ''">
-      <router-outlet #o="outlet"></router-outlet>
+    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 content" [@slideFadeAnimation]="o.isActivated ? o.activatedRoute : ''">
+      <div class="main-content">
+        <router-outlet #o="outlet"></router-outlet>
+      </div>
     </main>
   </div>
 </div>
